syntax = "proto3";
option java_multiple_files = true;
package com.example.systemevents;

message SystemEventRequest {
    enum LogType {
        INFO = 0;
        ERROR = 1;
    }
    LogType logType = 1;
    string serviceName = 2;
    int32 userId = 3;
    string action = 4;
    string requestBody = 5;
    string time = 6;
}

message SystemEventResponse {
    string eventId = 1;
}

service SystemEventService {
    rpc register(SystemEventRequest) returns (SystemEventResponse);
}